--- a/app/views/blog/posts.html.twig
+++ b/app/views/blog/posts.html.twig
@@ -32,18 +32,29 @@
         <!-- Sidebar -->
         <div class="col-lg">
           <!-- Categories widget -->
-          <div class="card mb-4">
-            <div class="card-header">Categories</div>
-            <div class="card-body">
-              <ul class="list-unstyled">
-                {% for category in categories %}
-                  <li>
-                    <a class="nav-link" href="/../mon-blog/posts/{{ category.id }}">{{ category.name }}</a>
-                  </li>
-                {% endfor %}
-              </ul>
+          <nav class="navbar navbar-dark bg-dark mb-5">
+            <div class="container-fluid">
+              <a class="navbar-brand">Catégories</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">Afficher
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+                <div class="offcanvas-header">
+                  <h3 class="offcanvas-title text-info pt-3" id="offcanvasDarkNavbarLabel">Liste des Catégories</h3>
+                  <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    {% for category in categories %}
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/../mon-blog/posts/{{ category.id }}">{{ category.name }}</a>
+                      </li>
+                    {% endfor %}
+                  </ul>
+                </div>
+              </div>
             </div>
-          </div>
+          </nav>
         </div>
       {% endif %}
     {% if posts is empty %}
@@ -104,31 +115,27 @@
         </div>
         {% endfor %}
     </div>
+    <!-- Pagination -->
     <nav aria-label="Page navigation example">
+      <hr/>
       <ul class="pagination pagination-blog justify-content-center">
-        <li class="page-item disabled">
-          <a class="page-link" href="#!" aria-label="Previous">
-            <span aria-hidden="true">«</span></a>
-        </li>
-        <li class="page-item active">
-          <a class="page-link" href="#!">1</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#!">2</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#!">3</a>
-        </li>
-        <li class="page-item disabled">
-          <a class="page-link" href="#!">...</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#!">12</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#!" aria-label="Next">
-            <span aria-hidden="true">»</span></a>
-        </li>
+        {% if currentPage > 1 %}
+          <li class="page-item disabled">
+            <a class="page-link" href="/../mon-blog/posts{{ currentPage - 1 }}"  aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span></a>
+          </li>
+        {% endif %}
+        {% for page in 1..totalPages %}
+          <li class="page-item {% if page == currentPage %}active{% endif %}">
+            <a class="page-link" href="/../mon-blog/posts{{ page }}">{{ page }}</a>
+          </li>
+        {% endfor %}
+        {% if currentPage < totalPages %}
+          <li class="page-item {% if page == currentPage %}active{% endif %}">
+              <a class="page-link" href="/../mon-blog/posts{{ currentPage + 1 }}" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span></a>
+            </li>
+        {% endif %}
       </ul>
     </nav>
   </div>
