--- a/app/views/templates/blogLayout.html.twig
+++ b/app/views/templates/blogLayout.html.twig
@@ -28,40 +28,44 @@
     <div id="layoutDefault">
       <div id="layoutDefault_content">
         <main>
-          <!-- Navbar-->
-          <nav class="navbar navbar-marketing navbar-expand-lg bg-transparent navbar-dark fixed-top">
-            <div class="container px-5">
-              <a class="navbar-brand text-white" href="/../mon-blog">Adjoukou AGBELOU</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <i data-feather="menu"></i>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link {% if page == 'home' %}active{% endif %}" href="/../mon-blog">Accueil</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link {% if page == 'posts' %}active{% endif %}" href="/../mon-blog/posts">Articles</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link {% if page == 'contact' %}active{% endif %}" href="/../mon-blog/contact">Contact</a>
-                  </li>
-                </ul>
-                {%if user is defined and user is not null %}
-                  <a class="btn fw-500 ms-lg-4 btn-teal {% if page == 'logout' %}active{% endif %}" href="/../mon-blog/logout">
-                    Se déconnecter
-                    <i class="ms-2" data-feather="log-out"></i>
-                  </a>
-                {% else %}
+        {% block main %}
+          <!-- Navbar-->            
+          <!-- nav container -->
+          {% block navContainer %}
+            <nav class="navbar navbar-marketing navbar-expand-lg bg-transparent navbar-dark fixed-top">
+              <div class="container px-5">
+                <a class="navbar-brand text-white" href="/../mon-blog">Adjoukou AGBELOU</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <i data-feather="menu"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link {% if page == 'home' %}active{% endif %}" href="/../mon-blog">Accueil</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link {% if page == 'posts' %}active{% endif %}" href="/../mon-blog/posts">Articles</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link {% if page == 'contact' %}active{% endif %}" href="/../mon-blog/contact">Contact</a>
+                    </li>
+                  </ul>
+                  {%if user is defined and user is not null %}
+                    <a class="btn fw-500 ms-lg-4 btn-teal {% if page == 'logout' %}active{% endif %}" href="/../mon-blog/logout">
+                      Se déconnecter
+                      <i class="ms-2" data-feather="log-out"></i>
+                    </a>
+                  {% else %}
 
-                  <a class="btn fw-500 ms-lg-4 btn-white {% if page == 'login' %}active{% endif %}" href="/../mon-blog/login">
-                    Se connecter
-                    <i class="ms-2" data-feather="log-in"></i>
-                  </a>
-                {% endif %}
+                    <a class="btn fw-500 ms-lg-4 btn-white {% if page == 'login' %}active{% endif %}" href="/../mon-blog/login">
+                      Se connecter
+                      <i class="ms-2" data-feather="log-in"></i>
+                    </a>
+                  {% endif %}
+                </div>
               </div>
-            </div>
-          </nav>
+            </nav>
+          {% endblock %}
 
           <!-- Page Header-->
           {% block header %}{% endblock %}
@@ -76,7 +80,7 @@
               </svg>
             </div>
           </section>
-
+        {% endblock %}
         </main>
       </div>
       <!-- Page footer-->
@@ -136,6 +140,5 @@
       <script src="/../mon-blog/public/js/passwordShow.js"></script>
       <script src="/../mon-blog/public/js/blogJs.js"></script>
     {% endblock %}
-
   </body>
 </html>
