display single post and comment belong

--- a/app/views/blog/home.html.twig
+++ b/app/views/blog/home.html.twig
@@ -1,6 +1,6 @@
 {% extends 'templates/blogLayout.html.twig' %}
 
-{% set page = 'post' %}
+{% set page = 'home' %}
 
 {% block header %}{% endblock %}
 
