--- a/public/css/myStyles.css
+++ b/public/css/myStyles.css
@@ -1,8 +1,8 @@
-#myNavStyles .nav-link .fa,
-#myNavStyles .nav-link .fa{
+/* #myNavStyles .nav-link .fa,
+#myNavStyles .nav-link .fa{ */
   /* color: #FFF; */
   /* font-size: 20px; */
-  border-left: #FFF 3px solid;
+  /* border-left: #FFF 3px solid;
   padding-left: 10px;
 }
 #myNavStyles .nav-link{
@@ -22,4 +22,5 @@
   font-size: larger;
   padding: 50px;
   background-color: #dee2e62a;
-}
+} */
+
