--- a/app/views/blog/post.html.twig
+++ b/app/views/blog/post.html.twig
@@ -4,42 +4,42 @@
 {% block main %}
   <!-- nav container -->
   {% block navContainer %}
-  <nav class="navbar navbar-marketing navbar-expand-lg bg-transparent navbar-dark fixed-top">
-    <div class="container-fluid bg-dark px-5">
-      <a class="navbar-brand text-white" href="/../mon-blog">Adjoukou AGBELOU</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <i data-feather="menu"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link {% if page == 'home' %}active{% endif %}" href="/../mon-blog">Accueil</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if page == 'posts' %}active{% endif %}" href="/../mon-blog/posts">Articles</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if page == 'contact' %}active{% endif %}" href="/../mon-blog/contact">Contact</a>
-          </li>
-        </ul>
-        {%if user is defined and user is not null %}
-          <a class="btn fw-500 ms-lg-4 btn-teal {% if page == 'logout' %}active{% endif %}" href="/../mon-blog/logout">
-            Se déconnecter
-            <i class="ms-2" data-feather="log-out"></i>
-          </a>
-        {% else %}
+    <nav class="navbar navbar-marketing navbar-expand-lg bg-transparent navbar-dark fixed-top">
+      <div class="container-fluid bg-dark px-5">
+        <a class="navbar-brand text-white" href="/../mon-blog">Adjoukou AGBELOU</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <i data-feather="menu"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link {% if page == 'home' %}active{% endif %}" href="/../mon-blog">Accueil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {% if page == 'posts' %}active{% endif %}" href="/../mon-blog/posts">Articles</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {% if page == 'contact' %}active{% endif %}" href="/../mon-blog/contact">Contact</a>
+            </li>
+          </ul>
+          {%if user is defined and user is not null %}
+            <a class="btn fw-500 ms-lg-4 btn-teal {% if page == 'logout' %}active{% endif %}" href="/../mon-blog/logout">
+              Se déconnecter
+              <i class="ms-2" data-feather="log-out"></i>
+            </a>
+          {% else %}
 
-          <a class="btn fw-500 ms-lg-4 btn-white {% if page == 'login' %}active{% endif %}" href="/../mon-blog/login">
-            Se connecter
-            <i class="ms-2" data-feather="log-in"></i>
-          </a>
-        {% endif %}
+            <a class="btn fw-500 ms-lg-4 btn-white {% if page == 'login' %}active{% endif %}" href="/../mon-blog/login">
+              Se connecter
+              <i class="ms-2" data-feather="log-in"></i>
+            </a>
+          {% endif %}
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
   {% endblock %}
   {% block header %}
-  <hr class="mt-5 pt-5"/>
+    <hr class="mt-5 pt-5"/>
   {% endblock %}
 
   {% block section %}
@@ -48,56 +48,116 @@
         <div class="col-lg-10 col-xl-8">
           <div class="single-post">
             <h1 class="mt-5">{{ post.title }}</h1>
-            <p class="lead">Empower communities and energize engaging ideas; scale and impact do-gooders while disruptring industries. Venture philanthropy benefits corporations and people by moving the needle.</p>
             <div class="d-flex align-items-center justify-content-between mb-5">
               <div class="single-post-meta me-4">
-                <img class="single-post-meta-img" src="assets/img/illustrations/profiles/profile-1.png"/>
+                <img class="single-post-meta-img" src="/../mon-blog/public/assets/img/illustrations/profiles/profile-1.png"/>
                 <div class="single-post-meta-details">
-                  <div class="single-post-meta-details-name">Valerie Luna</div>
-                  <div class="single-post-meta-details-date">Feb 5 &middot; 6 min read</div>
+                  <div class="single-post-meta-details-name">Publié par : l'{{ post.authorRole }}</div>
+                  <div class="single-post-meta-details-date">Le,
+                    {{ post.createdAt }}</div>
                 </div>
               </div>
               <div class="single-post-meta-links">
-                <a href="#!">
-                  <i class="fab fa-twitter fa-fw"></i>
-                </a>
-                <a href="#!">
-                  <i class="fab fa-facebook-f fa-fw"></i>
-                </a>
-                <a href="#!">
-                  <i class="fas fa-bookmark fa-fw"></i>
-                </a>
+                <a href="https://www.linkedin.com/in/mike-adjoukou-agbelou-23640098/" target="blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/Mike031289" target="blank"><i class="fab fa-github"></i></a>
+                <a href="https://dmdprod.com/developpeur_adjoukou-agbelou" target="blank"><i class="fas fa-globe"></i></a>
               </div>
             </div>
-            <img class="img-fluid mb-2 rounded" src="https://source.unsplash.com/vZJdYl5JVXY/990x540"/>
-            <div class="small text-gray-500 text-center">Photo Credit: Unsplash</div>
+            <img class="img-fluid mb-2 rounded" src="/../mon-blog/public/assets/img/postImg/{{ post.imageUrl }}"/>
+            <div class="small text-gray-500 text-center">Photo Credit:
+              {{ user.userName }}</div>
             <div class="single-post-text my-5">
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit similique distinctio quidem blanditiis architecto ullam a itaque quisquam nihil! Unde ducimus deleniti exercitationem minima, molestiae ab saepe libero. Doloribus, a?</p>
-              <p>Magnam amet labore exercitationem maxime consectetur molestias quas quia dicta, praesentium minus illum quis fuga, fugiat velit voluptate sed nostrum ipsam atque.</p>
-              <p>Quaerat voluptas natus velit deleniti reprehenderit vero ad eos ab reiciendis. Libero dignissimos temporibus ipsam sint dolores voluptate consequatur debitis tempora doloremque.</p>
-              <h4>Creating Something New</h4>
-              <p>Laborum placeat quas accusantium vitae perferendis dolores possimus tempora, qui consectetur hic ullam autem. Enim, rerum obcaecati numquam quaerat necessitatibus voluptatem? Repellat!</p>
-              <p>Quasi, quos quaerat? Sint at odit possimus ullam saepe suscipit officiis nobis eaque, laudantium ut earum tempore repellendus mollitia odio nam! Unde?</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi explicabo unde perferendis reprehenderit ullam nobis? Laborum amet voluptatem sunt natus? Tempore commodi corporis accusamus laudantium assumenda blanditiis aut nobis culpa.</p>
-              <h4>It's time to build your new project</h4>
-              <p>Facilis enim voluptatibus qui voluptatum nemo non, facere, fugiat deserunt dicta ab sunt in sequi, assumenda nobis ipsam quidem corporis. Nemo, aliquam.</p>
-              <p>Illum numquam sapiente debitis similique, a accusantium quisquam recusandae! Nihil quia nulla blanditiis. Nobis numquam iure facilis consequuntur beatae eos adipisci doloremque!</p>
-              <p>Voluptate reiciendis nisi tempora laboriosam commodi sequi sapiente natus aut ab, cum aspernatur illo. Nobis laboriosam excepturi iste earum. Error, ab eius?</p>
-              <p>Quam, nesciunt iusto, praesentium amet necessitatibus quod porro libero voluptates soluta nostrum quisquam delectus repellendus totam accusamus sint magni dolore atque qui.</p>
-              <img class="img-fluid mb-2 rounded" src="https://source.unsplash.com/sv8oOQaUb-o/990x540"/>
-              <div class="small text-gray-500 text-center">Photo Credit: Unsplash</div>
-              <h4>It's time to build your new project</h4>
-              <p>Laborum placeat quas accusantium vitae perferendis dolores possimus tempora, qui consectetur hic ullam autem. Enim, rerum obcaecati numquam quaerat necessitatibus voluptatem? Repellat!</p>
-              <p>Quasi, quos quaerat? Sint at odit possimus ullam saepe suscipit officiis nobis eaque, laudantium ut earum tempore repellendus mollitia odio nam! Unde?</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi explicabo unde perferendis reprehenderit ullam nobis? Laborum amet voluptatem sunt natus? Tempore commodi corporis accusamus laudantium assumenda blanditiis aut nobis culpa.</p>
+              <p>{{ post.content }}</p>
               <hr class="my-5"/>
               <div class="text-center">
-                <a class="btn btn-transparent-dark" href="page-blog-overview.html">Back to Blog Overview</a>
+                <a class="btn btn-transparent-dark" href="/../mon-blog/posts">Retour à la Liste des Posts</a>
               </div>
             </div>
-          </div>
+          </div> 
+          {% if user is defined and user is not null %}
+            <!-- formulaire d'ajout de commentaires -->
+            <form class="mt-5" method="POST">
+              <div class="card mb-5">
+                  <div class="card-header text-secondary">LAISSEZ NOUS UN COMMENTAIRE</div>
+                  <div class="card-body">
+                      {# <input type="hidden" name="article_id" value="{{ post.id }}"> #}
+                      <textarea class="form-control mb-2" name="content" placeholder="Ajouter un commentaire" required="required" rows="4"></textarea>
+                      <button type="submit" class="btn btn-secondary btn-sm me-2">Ajouter</button>
+                  </div>
+              </div>
+            </form>
+            {% else %}
+            <div class="mb-5">
+              <p>Pour nous laissez votre commentaire vous devez être connecté ! Si non inscrivez vous pour vous connecter celà vous prendra environ 2 min</p>
+              <a href="/../mon-blog/login" class="btn btn-success btn-sm">Je me connecte</a>
+              <a href="/../mon-blog/register" class="btn btn-secondary btn-sm">Je suis nouveau</a>
+            </div>
+          {% endif %}
+
+          {% if comments %}
+            <!-- affichage des commentaires -->
+            <section class="bg-light py-3">
+              <div class="container px-5">
+                <div class="row gx-5 justify-content-center">
+                  <div class="col-lg-10">
+                    <h3 class="post-archive-tag">
+                      <span class="translate-midlle badge rounded bg-secondary p-2">{{ comments|length }}</span> COMMENTAIRES
+                    </h3>
+                    {% for comment in comments %}
+                    <div>
+                      <a class="post-archive-item">
+                        <h5>Auteur du Commentaire: {{ comment.authorName }}</h5>
+                        <p>{{ comment.content }}</p>
+                      </a>
+                      <div class="post-archive-meta">
+                        <img class="post-archive-meta-img" src="/../mon-blog/public/assets/img/illustrations/profiles/profile-1.png"/>
+                        <div class="post-archive-meta-details">
+                          <div class="post-archive-meta-details-name">Auteur : {{ comment.authorName }}</div>
+                          <div class="post-archive-meta-details-date">Commentaire ajouté le : {{ comment.createdAt }}</div>
+                      </div>
+                    </div>
+                    <hr class="my-5"/>
+                    {% endfor %}
+
+                    {% else %}
+                      <p><span class="translate-midlle badge rounded bg-dark p-2">{{ comments|length }}</span> commentaire pour ce post. Laissez nous votre commentaire, nous apprécions vos retours</p>
+                    {% endif %}
+
+                  </div>
+                </div>
+                <nav aria-label="Page navigation example">
+                  <ul class="pagination pagination-blog justify-content-center">
+                    <li class="page-item disabled">
+                      <a class="page-link" href="#!" aria-label="Previous">
+                        <span aria-hidden="true">«</span></a>
+                    </li>
+                    <li class="page-item active">
+                      <a class="page-link" href="#!">1</a>
+                    </li>
+                    <li class="page-item">
+                      <a class="page-link" href="#!">2</a>
+                    </li>
+                    <li class="page-item">
+                      <a class="page-link" href="#!">3</a>
+                    </li>
+                    <li class="page-item disabled">
+                      <a class="page-link" href="#!">...</a>
+                    </li>
+                    <li class="page-item">
+                      <a class="page-link" href="#!">12</a>
+                    </li>
+                    <li class="page-item">
+                      <a class="page-link" href="#!" aria-label="Next">
+                        <span aria-hidden="true">»</span></a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>
+            </section>
         </div>
+       
       </div>
     </div>
+    
   {% endblock %}
 {% endblock %}
