--- a/app/views/blog/post.html.twig
+++ b/app/views/blog/post.html.twig
@@ -4,8 +4,8 @@
 {% block main %}
   <!-- nav container -->
   {% block navContainer %}
-    <nav class="navbar navbar-marketing navbar-expand-lg bg-transparent navbar-dark fixed-top">
-      <div class="container-fluid bg-dark px-5">
+    <nav class="navbar navbar-marketing navbar-expand-lg bg-dark navbar-dark fixed-top">
+      <div class="container bg-dark px-5">
         <a class="navbar-brand text-white" href="/../mon-blog">Adjoukou AGBELOU</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <i data-feather="menu"></i>
