--- a/app/views/templates/adminLayout.html.twig
+++ b/app/views/templates/adminLayout.html.twig
@@ -89,24 +89,6 @@
                 <!-- Sidenav Menu Heading (Account)-->
                 <!-- * * Note: * * Visible only on and above the sm breakpoint-->
                 <div class="sidenav-menu-heading d-sm-none">Comptes</div>
-                <!-- Sidenav Link (Alerts)-->
-                <!-- * * Note: * * Visible only on and above the sm breakpoint-->
-                <a class="nav-link d-sm-none" href="#!">
-                  <div class="nav-link-icon">
-                    <i data-feather="bell"></i>
-                  </div>
-                  Alerts
-                  <span class="badge bg-warning-soft text-warning ms-auto">4 New!</span>
-                </a>
-                <!-- Sidenav Link (Messages)-->
-                <!-- * * Note: * * Visible only on and above the sm breakpoint-->
-                <a class="nav-link d-sm-none" href="#!">
-                  <div class="nav-link-icon">
-                    <i data-feather="mail"></i>
-                  </div>
-                  Messages
-                  <span class="badge bg-success-soft text-success ms-auto">2 New!</span>
-                </a>
                 <!-- Sidenav Heading (Custom)-->
                 <div class="sidenav-menu-heading">Gestion de Profils</div>
                 <!-- Sidenav Accordion (Pages)-->
@@ -120,33 +102,8 @@
                   </div>
                 </a>
                 <div class="collapse" id="collapsePages" data-bs-parent="#accordionSidenav">
-                  <nav class="sidenav-menu-nested nav accordion" id="accordionSidenavPagesMenu">
-                    <!-- Nested Sidenav Accordion (Pages -> Account)-->
-                    <a class="nav-link collapsed" href="javascript:void(0);" data-bs-toggle="collapse" data-bs-target="#pagesCollapseAccount" aria-expanded="false" aria-controls="pagesCollapseAccount">
-                      Comptes Admin
-                      <div class="sidenav-collapse-arrow">
-                        <i class="fas fa-angle-down"></i>
-                      </div>
-                    </a>
-                    <div class="collapse" id="pagesCollapseAccount" data-bs-parent="#accordionSidenavPagesMenu">
-                      <nav class="sidenav-menu-nested nav">
-                        <a class="nav-link {% if page == 'admin-profile' %}active{% endif %}" href="/../mon-blog/adminDashboard/admin-profile">Détails du Profile</a>
-                        <a class="nav-link {% if page == 'create-admin' %}active{% endif %}" href="/../mon-blog/adminDashboard/create-admin">Créer un Admin</a>
-                        <a class="nav-link {% if page == 'admin-list' %}active{% endif %}" href="/../mon-blog/adminDashboard/admin-list">Liste des Admin</a>
-                      </nav>
-                    </div>
-                    <!-- Nested Sidenav Accordion (Apps -> User Management)-->
-                    <a class="nav-link collapsed" href="javascript:void(0);" data-bs-toggle="collapse" data-bs-target="#appsCollapseUserManagement" aria-expanded="false" aria-controls="appsCollapseUserManagement">
-                      Comptes visiteurs
-                      <div class="sidenav-collapse-arrow">
-                        <i class="fas fa-angle-down"></i>
-                      </div>
-                    </a>
-                    <div class="collapse" id="appsCollapseUserManagement" data-bs-parent="#accordionSidenavAppsMenu">
-                      <nav class="sidenav-menu-nested nav">
-                        <a class="nav-link {% if page == 'visitor-list' %}active{% endif %}" href="/../mon-blog/adminDashboard/visitor-list">Liste des Visiteurs</a>
-                      </nav>
-                    </div>
+                  <nav class="sidenav-menu-nested nav">
+                    <a class="nav-link {% if page == 'admin-profile' %}active{% endif %}" href="/../mon-blog/adminDashboard/admin-profile">Afficher mon Profile</a>
                   </nav>
                 </div>
                 <!-- Sidenav Heading (UI Toolkit)-->
@@ -186,16 +143,10 @@
                 <div class="collapse" id="appsCollapseMessage" data-bs-parent="#accordionSidenavAppsMenu">
                   <nav class="sidenav-menu-nested nav">
                     <a class="nav-link {% if page == 'contacts' %}active{% endif %}" href="/../mon-blog/adminDashboard/contacts/{{ 1 }}">
-                      <div class="nav-link-icon">
-                        <i data-feather="book"></i>
-                      </div>
                       Contactes
                     </a>
                     <!-- Sidenav Link (Tables)-->
                     <a class="nav-link {% if page == 'comments' %}active{% endif %}" href="/../mon-blog/adminDashboard/comments/{{ 1 }}">
-                      <div class="nav-link-icon">
-                        <i data-feather="message-square"></i>
-                      </div>
                       Commentaires
                     </a>
                   </nav>
