--- a/app/views/admin/admin-profile.html.twig
+++ b/app/views/admin/admin-profile.html.twig
@@ -42,22 +42,20 @@
             <!-- Account page navigation-->
             <nav class="nav nav-borders">
               <a class="nav-link active ms-0" href="/../mon-blog/adminDashboard/admin-profile">Profile</a>
-              <a class="nav-link" href="account-billing.html">Créer un admin</a>
-              <a class="nav-link" href="account-security.html">Liste des admin</a>
             </nav>
             <hr class="mt-0 mb-4"/>
             <div class="row">
               <div class="col-xl-4">
                 <!-- Profile picture card-->
                 <div class="card mb-4 mb-xl-0">
-                  <div class="card-header">Profile Picture</div>
+                  <div class="card-header">Photo de Profile</div>
                   <div class="card-body text-center">
                     <!-- Profile picture image-->
                     <img class="img-account-profile rounded-circle mb-2" src="/../mon-blog/public/assets/img/illustrations/profiles/profile-1.png" alt="admin avatar"/>
                     <!-- Profile picture help block-->
                     <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div>
                     <!-- Profile picture upload button-->
-                    <button class="btn btn-primary" type="button">Changer d'avatar</button>
+                    <button class="btn btn-primary" type="button">Changer ma Photo de Profile</button>
                   </div>
                 </div>
               </div>
