--- a/app/views/errors/404.html.twig
+++ b/app/views/errors/404.html.twig
@@ -1,9 +1,71 @@
-{% extends 'templates/layout.html.twig' %}
+{% extends 'templates/blogLayout.html.twig' %}
 
-{% block header %}
+{% block main %}
+  <!-- nav container -->
+  {% block navContainer %}
+    <nav class="navbar navbar-marketing navbar-expand-lg bg-dark navbar-dark fixed-top">
+      <div class="container bg-dark px-5">
+        <a class="navbar-brand text-white" href="/../mon-blog">Adjoukou AGBELOU</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <i data-feather="menu"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link {% if page == 'home' %}active{% endif %}" href="/../mon-blog">Accueil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {% if page == 'posts' %}active{% endif %}" href="/../mon-blog/posts/{{ 1 }}">Articles</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {% if page == 'contact' %}active{% endif %}" href="/../mon-blog/contact">Contact</a>
+            </li>
+          </ul>
+          {%if user is defined and user is not null %}
+            <a class="btn fw-500 ms-lg-4 btn-teal {% if page == 'logout' %}active{% endif %}" href="/../mon-blog/logout">
+              Se déconnecter
+              <i class="ms-2" data-feather="log-out"></i>
+            </a>
+          {% else %}
+
+            <a class="btn fw-500 ms-lg-4 btn-white {% if page == 'login' %}active{% endif %}" href="/../mon-blog/login">
+              Se connecter
+              <i class="ms-2" data-feather="log-in"></i>
+            </a>
+          {% endif %}
+        </div>
+      </div>
+    </nav>
+  {% endblock %}
+  {% block header %}
+    <hr class="mt-5 pt-5"/>
+  {% endblock %}
+
+  {% block section %}
+    <!-- Contenu spécifique de la page 404 -->
+    <div id="layoutError">
+        {# <div id="layoutError_content"> #}
+            <div class="container">
+                <div class="row justify-content-center">
+                <div class="col-lg-6">
+                    <div class="text-center mt-5">
+                    <img class="m-5 img-error" src="/../mon-blog/public/assets/error-404-Ralou.svg"/>
+                    <p class="lead">
+                        Oupss !! La page que vous souhaitez accéder n'existe pas
+                    </p>
+                    </div>
+                </div>
+                </div>
+            </div>
+        {# </div> #}
+    </div>
+  {% endblock %}
 {% endblock %}
 
-{% block content %}
+{# {% block header %}
+{% endblock %} #}
+
+{# {% block content %}
     <!-- Contenu spécifique de la page 404 -->
     <div id="layoutError">
         <div id="layoutError_content">
@@ -23,5 +85,5 @@
             </main>
         </div>
     </div>
-{% endblock %}
+{% endblock %} #}
 
