--- a/app/views/templates/blogLayout.html.twig
+++ b/app/views/templates/blogLayout.html.twig
@@ -44,7 +44,7 @@
                       <a class="nav-link {% if page == 'home' %}active{% endif %}" href="/../mon-blog">Accueil</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link {% if page == 'posts' %}active{% endif %}" href="/../mon-blog/posts">Articles</a>
+                      <a class="nav-link {% if page == 'posts' %}active{% endif %}" href="/../mon-blog/posts/{{ 1 }}">Articles</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link {% if page == 'contact' %}active{% endif %}" href="/../mon-blog/contact">Contact</a>
