gestion des catégorie part 1

--- a/app/views/blog/posts.html.twig
+++ b/app/views/blog/posts.html.twig
@@ -48,7 +48,7 @@
                     {% for category in categories %}
                       <hr/>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/../mon-blog/posts/{{ category.id }}">{{ category.name }}</a>
+                        <a class="nav-link active" aria-current="page" href="/../mon-blog/posts/{{ 1 }}/{{ category.id }}">{{ category.name }}</a>
                       </li>
                     {% endfor %}
                   </ul>
