show post by categorie

--- a/app/views/blog/posts-by-category.html.twig
+++ b/app/views/blog/posts-by-category.html.twig
@@ -1,6 +1,6 @@
 {% extends 'templates/blogLayout.html.twig' %}
 
-{% set page = 'posts' %}
+{% set page = 'posts-by-category' %}
 
 {% block header %}
   <!-- Page Header-->
@@ -26,39 +26,39 @@
 
 {% block section %}
   <div class="container px-5">
-  {% if categories is empty %}
-        <p>Aucune catégories repertoriée</p>
-      {% else %}
-        <!-- Sidebar -->
-        <div class="col-lg">
-          <!-- Categories widget -->
-          <nav class="navbar navbar-dark bg-dark mb-5">
-            <div class="container-fluid">
-              <a class="navbar-brand">Catégories</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">Afficher
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-                <div class="offcanvas-header">
-                  <h3 class="offcanvas-title text-info pt-3" id="offcanvasDarkNavbarLabel">Liste des Catégories</h3>
-                  <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    {% for category in categories %}
-                      <hr/>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/../mon-blog/posts-by-category/{{ 1 }}/{{ category.id }}">{{ category.name }}</a>
-                      </li>
-                    {% endfor %}
-                  </ul>
-                  <hr/>
-                </div>
+    {% if categories is empty %}
+      <p>Aucune catégories repertoriée</p>
+    {% else %}
+      <!-- Sidebar -->
+      <div class="col-lg">
+        <!-- Categories widget -->
+        <nav class="navbar navbar-dark bg-dark mb-5">
+          <div class="container-fluid">
+            <a class="navbar-brand">Catégories</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">Afficher
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+              <div class="offcanvas-header">
+                <h3 class="offcanvas-title text-info pt-3" id="offcanvasDarkNavbarLabel">Liste des Catégories</h3>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              </div>
+              <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                  {% for category in categories %}
+                    <hr/>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="/../mon-blog/posts-by-category/{{ 1 }}/{{ category.id }}">{{ category.name }}</a>
+                    </li>
+                  {% endfor %}
+                </ul>
+                <hr/>
               </div>
             </div>
-          </nav>
-        </div>
-      {% endif %}
+          </div>
+        </nav>
+      </div>
+    {% endif %}
     {% if posts is empty %}
       <p>Aucun post disponible</p>
     {% else %}
@@ -115,26 +115,27 @@
             </div>
           </a>
         </div>
-        {% endfor %}
+      {% endfor %}
     </div>
     <!-- Pagination -->
     <nav aria-label="Pagination">
       <hr/>
       <ul class="pagination pagination-blog justify-content-center">
+      
         {% if currentPage > 1 %}
-          <li class="page-item">
-            <a class="page-link" href="/../mon-blog/posts/{{ currentPage - 1 }}" tabindex="-1" aria-disabled="true">
+          <li class="page-item disabled">
+            <a class="page-link" href="/../mon-blog/posts-by-category/{{ currentPage - 1 }}/{{ category.id }}" tabindex="-1" aria-disabled="true">
               <span aria-hidden="true">&laquo;</span></a>
           </li>
         {% endif %}
         {% for page in 1..totalPages %}
           <li class="page-item {% if page == currentPage %}active{% endif %}" aria-current="page">
-            <a class="page-link" href="/../mon-blog/posts/{{ page }}">{{ page }}</a>
+            <a class="page-link" href="/../mon-blog/posts-by-category/{{ page }}">{{ page }}</a>
           </li>
         {% endfor %}
         {% if currentPage < totalPages %}
           <li class="page-item" aria-current="page">
-            <a class="page-link" href="/../mon-blog/posts/{{ currentPage + 1 }}">
+            <a class="page-link" href="/../mon-blog/posts-by-category/{{ currentPage + 1 }}/{{ category.id }}">
               <span aria-hidden="true">&raquo;</span></a>
           </li>
         {% endif %}
