--- a/app/views/blog/posts-by-category.html.twig
+++ b/app/views/blog/posts-by-category.html.twig
@@ -40,7 +40,7 @@
             </button>
             <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
               <div class="offcanvas-header">
-                <h3 class="offcanvas-title text-info pt-3" id="offcanvasDarkNavbarLabel">Liste des Catégories</h3>
+                <h3 class="offcanvas-title text-info pt-3" id="offcanvasDarkNavbarLabel">LISTES DES CATEGORIES</h3>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
               </div>
               <div class="offcanvas-body">
@@ -48,11 +48,15 @@
                   {% for category in categories %}
                     <hr/>
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="/../mon-blog/posts-by-category/{{ 1 }}/{{ category.id }}">{{ category.name }}</a>
+                      <a class="nav-link {% if page == 'posts-by-category' %}active{% endif %}" aria-current="page" href="/../mon-blog/posts-by-category/{{ 1 }}/{{ category.id }}">{{ category.name }}</a>
                     </li>
                   {% endfor %}
+                  <hr/>
+
+                  <li class="nav-item  pt-3">
+                    <a class="nav-link {% if page == 'posts' %}active{% endif %} text-info"  aria-current="page" href="/../mon-blog/posts/{{ 1 }}"><i class="fa fa-arrow-left" aria-hidden="true"></i> RETOUR A LA LISTE DES ARTICLES</a>
+                  </li>
                 </ul>
-                <hr/>
               </div>
             </div>
           </div>
@@ -61,37 +65,6 @@
     {% endif %}
     {% if posts is empty %}
       <p>Aucun post disponible</p>
-    {% else %}
-      {% set latestPost = posts | last %}
-      <!-- Featured blog post -->
-      <a class="card post-preview post-preview-featured lift mb-5 overflow-hidden" href="/../mon-blog/post/{{ latestPost.id }}">
-        <div class="card-header">
-          <h1 class="card-title text-danger">A LA UNE !</h1>
-        </div>
-        <div class="row g-0">
-          <div class="col-lg-5">
-            <div class="post-preview-featured-img  h-auto"><img class="card-img-top" src="/../mon-blog/public/assets/img/postImg/{{ latestPost.imageUrl }}" alt="post image"/></div>
-          </div>
-          <div class="col-lg-7">
-            <div class="card-body">
-              <div class="py-5">
-                <h5 class="card-title text-info">{{ latestPost.title }}</h5>
-                <p class="card-text">{{ latestPost.postpreview }}</p>
-              </div>
-              <hr/>
-              <div class="post-preview-meta">
-                <img class="post-preview-meta-img" src="/../mon-blog/public/assets/img/illustrations/profiles/profile-1.png"/>
-                <div class="post-preview-meta-details col-lg col-md col-sm">
-                  <div class="post-preview-meta-details-name">Publié par : l'{{ latestPost.authorRole }}</div>
-                  <div class="post-preview-meta-details-date">Le,
-                    {{ latestPost.createdAt }}</div>
-                </div>
-                <button class="btn btn-dark btn-sm col-lg-2" href="/../mon-blog/post/{{ latestPost.id }}">Lire plus →</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </a>
     {% endif %}
     <div class="row gx-5">
       {% for post in posts %}
@@ -118,28 +91,28 @@
       {% endfor %}
     </div>
     <!-- Pagination -->
-    <nav aria-label="Pagination">
+    {# <nav aria-label="Pagination">
       <hr/>
       <ul class="pagination pagination-blog justify-content-center">
       
         {% if currentPage > 1 %}
           <li class="page-item disabled">
-            <a class="page-link" href="/../mon-blog/posts-by-category/{{ currentPage - 1 }}/{{ category.id }}" tabindex="-1" aria-disabled="true">
+            <a class="page-link" href="/../mon-blog/posts-by-category/{{ currentPage - 1 }}" tabindex="-1" aria-disabled="true">
               <span aria-hidden="true">&laquo;</span></a>
           </li>
         {% endif %}
         {% for page in 1..totalPages %}
           <li class="page-item {% if page == currentPage %}active{% endif %}" aria-current="page">
-            <a class="page-link" href="/../mon-blog/posts-by-category/{{ page }}">{{ page }}</a>
+            <a class="page-link" href="/../mon-blog/posts-by-category/{{ currentPage }}/{{ currentPage + 1 }}">{{ page }}</a>
           </li>
         {% endfor %}
         {% if currentPage < totalPages %}
           <li class="page-item" aria-current="page">
-            <a class="page-link" href="/../mon-blog/posts-by-category/{{ currentPage + 1 }}/{{ category.id }}">
+            <a class="page-link" href="/../mon-blog/posts-by-category/{{ currentPage }}/{{ currentPage }}">
               <span aria-hidden="true">&raquo;</span></a>
           </li>
         {% endif %}
       </ul>
-    </nav>
+    </nav> #}
   </div>
 {% endblock %}
