--- a/app/views/templates/blogLayout.html.twig
+++ b/app/views/templates/blogLayout.html.twig
@@ -110,7 +110,7 @@
                     <a class="{% if page == 'home' %}active{% endif %}" href="/../mon-blog">Accueil</a>
                   </li>
                   <li class="mb-2 nav-item">
-                    <a class="{% if page == 'posts' %}active{% endif %}" href="/../mon-blog/posts">Articles</a>
+                    <a class="{% if page == 'posts' %}active{% endif %}" href="/../mon-blog/posts/{{ 1 }}">Articles</a>
                   </li>
                   <li class="nav-item">
                     <a class="{% if page == 'contact' %}active{% endif %}" href="/../mon-blog/contact">Contact</a>
